crates/parser/tests/cases/snapshots/cases__parse_ast__contract_def.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(contract_def), try_parse_module,\n    r#\"contract Foo {\n  x: address\n  pub y: u8\n  pub const z: Map<u8, address>\n\n  pub fn foo() -> u8 {\n    return 10\n  }\n  event Bar {\n    idx from: address\n  }\n}\n\"#)"

---
Node(
  kind: Module(
    body: [
      Contract(Node(
        kind: Contract(
          name: Node(
            kind: "Foo",
            span: Span(
              start: 9,
              end: 12,
            ),
          ),
          fields: [
            Node(
              kind: Field(
                is_pub: false,
                is_const: false,
                attributes: [],
                name: Node(
                  kind: "x",
                  span: Span(
                    start: 17,
                    end: 18,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "address",
                  ),
                  span: Span(
                    start: 20,
                    end: 27,
                  ),
                ),
                value: None,
              ),
              span: Span(
                start: 17,
                end: 27,
              ),
            ),
            Node(
              kind: Field(
                is_pub: true,
                is_const: false,
                attributes: [],
                name: Node(
                  kind: "y",
                  span: Span(
                    start: 34,
                    end: 35,
                  ),
                ),
                typ: Node(
                  kind: Base(
                    base: "u8",
                  ),
                  span: Span(
                    start: 37,
                    end: 39,
                  ),
                ),
                value: None,
              ),
              span: Span(
                start: 30,
                end: 39,
              ),
            ),
            Node(
              kind: Field(
                is_pub: true,
                is_const: true,
                attributes: [],
                name: Node(
                  kind: "z",
                  span: Span(
                    start: 52,
                    end: 53,
                  ),
                ),
                typ: Node(
                  kind: Generic(
                    base: Node(
                      kind: "Map",
                      span: Span(
                        start: 55,
                        end: 58,
                      ),
                    ),
                    args: Node(
                      kind: [
                        TypeDesc(Node(
                          kind: Base(
                            base: "u8",
                          ),
                          span: Span(
                            start: 59,
                            end: 61,
                          ),
                        )),
                        TypeDesc(Node(
                          kind: Base(
                            base: "address",
                          ),
                          span: Span(
                            start: 63,
                            end: 70,
                          ),
                        )),
                      ],
                      span: Span(
                        start: 58,
                        end: 71,
                      ),
                    ),
                  ),
                  span: Span(
                    start: 55,
                    end: 71,
                  ),
                ),
                value: None,
              ),
              span: Span(
                start: 42,
                end: 71,
              ),
            ),
          ],
          body: [
            Function(Node(
              kind: Function(
                sig: Node(
                  kind: FunctionSignature(
                    pub_: Some(Span(
                      start: 75,
                      end: 78,
                    )),
                    unsafe_: None,
                    name: Node(
                      kind: "foo",
                      span: Span(
                        start: 82,
                        end: 85,
                      ),
                    ),
                    generic_params: Node(
                      kind: [],
                      span: Span(
                        start: 82,
                        end: 85,
                      ),
                    ),
                    args: [],
                    return_type: Some(Node(
                      kind: Base(
                        base: "u8",
                      ),
                      span: Span(
                        start: 91,
                        end: 93,
                      ),
                    )),
                  ),
                  span: Span(
                    start: 75,
                    end: 93,
                  ),
                ),
                body: [
                  Node(
                    kind: Return(
                      value: Some(Node(
                        kind: Num("10"),
                        span: Span(
                          start: 107,
                          end: 109,
                        ),
                      )),
                    ),
                    span: Span(
                      start: 100,
                      end: 109,
                    ),
                  ),
                ],
              ),
              span: Span(
                start: 75,
                end: 113,
              ),
            )),
            Event(Node(
              kind: Event(
                name: Node(
                  kind: "Bar",
                  span: Span(
                    start: 122,
                    end: 125,
                  ),
                ),
                fields: [
                  Node(
                    kind: EventField(
                      is_idx: true,
                      name: Node(
                        kind: "from",
                        span: Span(
                          start: 136,
                          end: 140,
                        ),
                      ),
                      typ: Node(
                        kind: Base(
                          base: "address",
                        ),
                        span: Span(
                          start: 142,
                          end: 149,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 132,
                      end: 149,
                    ),
                  ),
                ],
                pub_qual: None,
              ),
              span: Span(
                start: 116,
                end: 153,
              ),
            )),
          ],
          pub_qual: None,
        ),
        span: Span(
          start: 0,
          end: 155,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 155,
  ),
)
