crates/parser/tests/cases/snapshots/cases__parse_ast__enum_def.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(enum_def), try_parse_module,\n    r#\"enum E {\n    Unit1\n    Tuple1(i32, String<10>)\n    Unit2\n    Tuple2(Array<u32, 10>, u256)\n}\"#)"
---
Node(
  kind: Module(
    body: [
      Enum(Node(
        kind: Enum(
          name: Node(
            kind: "E",
            span: Span(
              start: 5,
              end: 6,
            ),
          ),
          variants: [
            Node(
              kind: Variant(
                name: Node(
                  kind: "Unit1",
                  span: Span(
                    start: 13,
                    end: 18,
                  ),
                ),
                kind: Unit,
              ),
              span: Span(
                start: 13,
                end: 18,
              ),
            ),
            Node(
              kind: Variant(
                name: Node(
                  kind: "Tuple1",
                  span: Span(
                    start: 23,
                    end: 29,
                  ),
                ),
                kind: Tuple([
                  Node(
                    kind: Base(
                      base: "i32",
                    ),
                    span: Span(
                      start: 30,
                      end: 33,
                    ),
                  ),
                  Node(
                    kind: Generic(
                      base: Node(
                        kind: "String",
                        span: Span(
                          start: 35,
                          end: 41,
                        ),
                      ),
                      args: Node(
                        kind: [
                          Int(Node(
                            kind: 10,
                            span: Span(
                              start: 42,
                              end: 44,
                            ),
                          )),
                        ],
                        span: Span(
                          start: 41,
                          end: 45,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 35,
                      end: 45,
                    ),
                  ),
                ]),
              ),
              span: Span(
                start: 23,
                end: 46,
              ),
            ),
            Node(
              kind: Variant(
                name: Node(
                  kind: "Unit2",
                  span: Span(
                    start: 51,
                    end: 56,
                  ),
                ),
                kind: Unit,
              ),
              span: Span(
                start: 51,
                end: 56,
              ),
            ),
            Node(
              kind: Variant(
                name: Node(
                  kind: "Tuple2",
                  span: Span(
                    start: 61,
                    end: 67,
                  ),
                ),
                kind: Tuple([
                  Node(
                    kind: Generic(
                      base: Node(
                        kind: "Array",
                        span: Span(
                          start: 68,
                          end: 73,
                        ),
                      ),
                      args: Node(
                        kind: [
                          TypeDesc(Node(
                            kind: Base(
                              base: "u32",
                            ),
                            span: Span(
                              start: 74,
                              end: 77,
                            ),
                          )),
                          Int(Node(
                            kind: 10,
                            span: Span(
                              start: 79,
                              end: 81,
                            ),
                          )),
                        ],
                        span: Span(
                          start: 73,
                          end: 82,
                        ),
                      ),
                    ),
                    span: Span(
                      start: 68,
                      end: 82,
                    ),
                  ),
                  Node(
                    kind: Base(
                      base: "u256",
                    ),
                    span: Span(
                      start: 84,
                      end: 88,
                    ),
                  ),
                ]),
              ),
              span: Span(
                start: 61,
                end: 89,
              ),
            ),
          ],
          pub_qual: None,
        ),
        span: Span(
          start: 0,
          end: 91,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 91,
  ),
)
