crates/parser/tests/cases/snapshots/cases__parse_ast__enum_enum_def.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(enum_enum_def), try_parse_module, r#\"enum E {}\"#)"
---
Node(
  kind: Module(
    body: [
      Enum(Node(
        kind: Enum(
          name: Node(
            kind: "E",
            span: Span(
              start: 5,
              end: 6,
            ),
          ),
          variants: [],
          pub_qual: None,
        ),
        span: Span(
          start: 0,
          end: 9,
        ),
      )),
    ],
  ),
  span: Span(
    start: 0,
    end: 9,
  ),
)
