crates/parser/tests/cases/snapshots/cases__parse_ast__expr_call3.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_call3), expressions::parse_expr,\n           \"bing.foo<Bar>(x:3)\")"

---
Node(
  kind: Call(
    func: Node(
      kind: Attribute(
        value: Node(
          kind: Name("bing"),
          span: Span(
            start: 0,
            end: 4,
          ),
        ),
        attr: Node(
          kind: "foo",
          span: Span(
            start: 5,
            end: 8,
          ),
        ),
      ),
      span: Span(
        start: 0,
        end: 8,
      ),
    ),
    generic_args: Some(Node(
      kind: [
        TypeDesc(Node(
          kind: Base(
            base: "Bar",
          ),
          span: Span(
            start: 9,
            end: 12,
          ),
        )),
      ],
      span: Span(
        start: 8,
        end: 13,
      ),
    )),
    args: Node(
      kind: [
        Node(
          kind: CallArg(
            label: Some(Node(
              kind: "x",
              span: Span(
                start: 14,
                end: 15,
              ),
            )),
            value: Node(
              kind: Num("3"),
              span: Span(
                start: 16,
                end: 17,
              ),
            ),
          ),
          span: Span(
            start: 14,
            end: 17,
          ),
        ),
      ],
      span: Span(
        start: 13,
        end: 18,
      ),
    ),
  ),
  span: Span(
    start: 0,
    end: 18,
  ),
)
