crates/parser/tests/cases/snapshots/cases__parse_ast__expr_list.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_list), expressions::parse_expr, \"[]\")"

---
Node(
  kind: List(
    elts: [],
  ),
  span: Span(
    start: 0,
    end: 2,
  ),
)
