crates/parser/tests/cases/snapshots/cases__parse_ast__expr_num1.snap
---
source: parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_num1), expressions::parse_expr, \"12345\")"

---
Node(
  kind: Num("12345"),
  span: Span(
    start: 0,
    end: 5,
  ),
)
