crates/parser/tests/cases/snapshots/cases__parse_ast__expr_num2.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_num2), expressions::parse_expr, \"00001\")"

---
Node(
  kind: Num("00001"),
  span: Span(
    start: 0,
    end: 5,
  ),
)
