crates/parser/tests/cases/snapshots/cases__parse_ast__expr_num3.snap
---
source: crates/parser/tests/cases/parse_ast.rs
expression: "ast_string(stringify!(expr_num3), expressions::parse_expr, \"1000_000\")"

---
Node(
  kind: Num("1000_000"),
  span: Span(
    start: 0,
    end: 8,
  ),
)
